fixed icons for production

--- a/app/views/components/_responsive_categories_list.html.erb
+++ b/app/views/components/_responsive_categories_list.html.erb
@@ -6,43 +6,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -53,43 +53,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -100,43 +100,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -147,43 +147,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -194,43 +194,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -241,43 +241,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -288,43 +288,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs-gray", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs-gray.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
@@ -335,43 +335,43 @@
   <div class="categories__list">
     <div class="categories__item">
       <%= link_to "/?category=violence" do %>
-        <%= image_tag "violence", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "violence.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Violence</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=theft" do %>
-        <%= image_tag "theft", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "theft.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Theft</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=harassment" do %>
-        <%= image_tag "harassment", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "harassment.png", style: "height: 40px; width: 40px;" %>
       <% end %>
         <p>Harassment</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=disturbing" do %>
-        <%= image_tag "disturb", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "disturb.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Disturbance</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=arson" do %>
-        <%= image_tag "arson", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "arson.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Arson</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=drugs" do %>
-        <%= image_tag "drugs", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "drugs.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Drugs</p>
     </div>
     <div class="categories__item">
       <%= link_to "/?category=traffic" do %>
-        <%= image_tag "traffic", style: "height: 40px; width: 40px;" %>
+        <%= image_tag "traffic.png", style: "height: 40px; width: 40px;" %>
       <% end %>
       <p>Traffic</p>
     </div>
