added title to home page

--- a/app/views/components/home/_responsive_top_buttons.html.erb
+++ b/app/views/components/home/_responsive_top_buttons.html.erb
@@ -1,4 +1,4 @@
-<div class="ps-3 pe-3" style="margin-top: 75px;">
+<div class="ps-3 pe-3" style="margin-top: 9em;">
   <div class="d-flex justify-content-center gap-2">
     <% if params[:filter] == "crimenews" %>
       <a class="btn top_container__button" style="width: 100%;" href="/">
