--- a/app/assets/stylesheets/pages/home/_top_container.scss
+++ b/app/assets/stylesheets/pages/home/_top_container.scss
@@ -6,6 +6,7 @@
   top: 0;
 
   &__heading {
+    font-family: $roboto;
     font-size: inherit;
     position: relative;
     letter-spacing: 0.75px;
