--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,7 @@
 <div class="incidents-index">
-  <%= render "shared/map" %>
-  <%= render "components/home/top_container" %>
-  <%= render "components/filter" %>
+  <div class="home-bottom">
+    <%= render "shared/map" %>
+    <%= render "components/home/top_container" %>
+    <%= render "components/filter" %>
+  </div>
 </div>
