--- a/app/views/components/_date_picker_for_report.html.erb
+++ b/app/views/components/_date_picker_for_report.html.erb
@@ -3,7 +3,7 @@
 <div>
   <%= form_with url: "/incidents", method: :get, class:"date_picker_report" do |f| %>
     <%= f.label :incident_date, "Select date: " %>
-    <%= f.text_field :incident_date,
+    <%= f.date_field :incident_date,
       data: {
         controller: "flatpickr",
         flatpickr_date_format: "Y-m-d",
