--- a/app/views/incidents/_incident_card_bottom.html.erb
+++ b/app/views/incidents/_incident_card_bottom.html.erb
@@ -1,9 +1,11 @@
 <p class="card--category">
-  <%# result = request.location %>
-  <%#= (Geocoder::Calculations.distance_between([result.latitude, result.longitude], [@incident.latitude, @incident.longitude])).round(1) %>
   <% meguro_lat = 35.6415 %>
   <% meguro_long = 139.6981 %>
-  <% distance = (Geocoder::Calculations.distance_between([meguro_lat, meguro_long], [@incident.latitude, @incident.longitude])).round(0) %>
+  <% if request.location.latitude.present? %>
+    <% distance = (Geocoder::Calculations.distance_between([request.location.latitude, request.location.longitude], [@incident.latitude, @incident.longitude])).round(0) %>
+  <% else %>
+    <% distance = (Geocoder::Calculations.distance_between([meguro_lat, meguro_long], [@incident.latitude, @incident.longitude])).round(0) %>
+  <% end %>
   <%= render 'distance_icon', distance: distance %>
   <%= distance %>
   km away from you
