--- a/app/views/components/home/_responsive_top_buttons.html.erb
+++ b/app/views/components/home/_responsive_top_buttons.html.erb
@@ -1,5 +1,5 @@
-<div class="ps-3 pe-3" style="margin-top: 7em;">
-  <div class="d-flex justify-content-center gap-2">
+<div class="ps-3 pe-3">
+  <div class="top_container__buttons-container">
     <% if params[:filter] == "crimenews" %>
       <a class="btn top_container__button" style="width: 100%;" href="/">
         All
