--- a/app/views/components/home/_top_container.html.erb
+++ b/app/views/components/home/_top_container.html.erb
@@ -1,5 +1,7 @@
-<div class="container top_container mt-4">
-  <h1 style ="font-size: 36px;">Neighbor<span style="color: #0D6EFD;">HUD</span></h1>
-  <h4 class="top_container__heading" style="font-family: roboto; font-weight: 400;">Here are the recent incidents in your area</h4>
+<div class="top_container">
+  <div class="top_container__logo">
+    <h1 style ="font-size: 36px;">Neighbor<span style="color: #0D6EFD;">HUD</span></h1>
+    <h4 class="top_container__heading" style="font-family: roboto; font-weight: 400;">Here are the recent incidents in your area</h4>
+  </div>
   <%= render "components/home/responsive_top_buttons" %>
 </div>
