--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 
 /* ---------------------------------- Pages --------------------------------- */
 @import "pages/index";
+@import "pages/incidents/new";
 
 /* ------------------------------- Components ------------------------------- */
 @import "components/index";
