added incidents-new class

--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -1,4 +1,4 @@
-<div class="content" data-controller="report-details">
+<div class="incidents-new content" data-controller="report-details">
   <%= simple_form_for @incident,
                     data: {
                       report_details_target: 'form',
