refactored incidents/new style

--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -2,4 +2,27 @@
   .mapboxgl-ctrl-top-right {
     top: 1rem;
   }
+
+  .card.card--gray {
+    position: fixed;
+    bottom: 8rem;
+    z-index: 100;
+    width: 90%;
+    left: 50%;
+    transform: translateX(-50%);
+
+    .report-details__submit {
+      color: $light;
+      background-color: #747985;
+      border-radius: 1rem;
+      width: 100%;
+      position: fixed;
+      bottom: 4rem;
+      @include centralize();
+
+      &:focus {
+        background-color: #1a75e6;
+      }
+    }
+  }
 }
