added feed page scss file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@
 /* ---------------------------------- Pages --------------------------------- */
 @import "pages/index";
 @import "pages/incidents/new";
+@import "pages/feed/index";
 
 /* ------------------------------- Components ------------------------------- */
 @import "components/index";
