--- a/app/views/feed/index.html.erb
+++ b/app/views/feed/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container feed">
   <div class="d-flex justify-content-center mt-3 text--offwhite">
     <p>Here are the recent incidents in your area</p>
   </div>
@@ -6,16 +6,18 @@
     <%= render 'search' %>
   </div>
   <%= render 'buttons' %>
-  <div class="overflow-scroll mt-3 mb-3" style="max-height: 436px;">
+  <div class="overflow-scroll mt-3 mb-3 feed__incidents">
     <% @incidents.each do |incident| %>
       <%= render 'feed_card', incident: incident %>
     <% end %>
   </div>
-  <div class="d-flex justify-content-center text--offwhite">
-    <p style="margin: 0; padding: 0;">Filter by category or date</p>
+  <div class="feed__filter">
+    <div class="d-flex justify-content-center text--offwhite">
+      <p class="feed__paragraph">Filter by category or date</p>
+    </div>
+    <div class="categories">
+      <%= render "category_list" %>
+    </div>
+    <%= render 'date_picker' %>
   </div>
-  <div class="categories">
-    <%= render "category_list" %>
-  </div>
-  <%= render 'date_picker' %>
 </div>
