--- a/app/views/incidents/_incident_card.html.erb
+++ b/app/views/incidents/_incident_card.html.erb
@@ -16,17 +16,21 @@
     data-read-more-more-text-value="Read more"
     data-read-more-less-text-value="Read less"
   >
-    <p data-read-more-target="content">
-      <%= @incident.description.first(250) %>...
-    </p>
-    <div class="d-flex justify-content-end">
-      <button data-action="read-more#toggle">
-        See more
-      </button>
-    </div>
-    <template data-read-more-target="full">
-      <p><%= @incident.description %></p>
-    </template>
+    <% if @incident.description.chars.count > 250 %>
+      <p data-read-more-target="content">
+        <%= @incident.description.first(250) %>...
+      </p>
+      <div class="d-flex justify-content-end">
+        <button data-action="read-more#toggle">
+          See more
+        </button>
+      </div>
+      <template data-read-more-target="full">
+        <p><%= @incident.description %></p>
+      </template>
+    <% else %>
+       <p><%= @incident.description %></p>
+    <% end %>
   </div>
   <div class="d-flex justify-content-between align-items-end mt-2">
     <%= render 'incident_card_bottom', incident: @incident  %>
