changed home page search bar and filter styles

--- a/app/views/components/home/_responsive_top_buttons.html.erb
+++ b/app/views/components/home/_responsive_top_buttons.html.erb
@@ -1,5 +1,5 @@
-  
-<div class="top_container__buttons-container">
+
+<div class="top_container__buttons-container container">
   <% if params[:filter] == "crimenews" %>
     <a class="btn top_container__button" style="width: 100%;" href="/">
       All
