--- a/app/assets/stylesheets/pages/home/_top_container.scss
+++ b/app/assets/stylesheets/pages/home/_top_container.scss
@@ -21,8 +21,10 @@
   &__buttons-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1rem;
-    margin-top: 5rem;
+    gap: 0.5rem;
+    margin-top: 4.75rem;
+    margin-inline: auto;
+    padding-inline: 1.25rem;
   }
 
   &__button {
