--- a/app/views/incidents/new.html.erb
+++ b/app/views/incidents/new.html.erb
@@ -5,9 +5,9 @@
                       action: "submit->report-details#create" } do |f| %>
     <div class="report">
       <%# <%= render "components/incident_report", f: f %>
-      <div class="mb-0">
+      <div class="report-form">
         <h3 class="report_container__heading">Report on <span style="color: #238beb">Incident</span></h3>
-        <%= f.input :location,
+        <%# <%= f.input :location,
               input_html: { data: { geocoder_target: "location" }, class: "search" },
               wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } },
               label: false,
@@ -16,7 +16,7 @@
         <%= f.input :longitude,label: false, as: :hidden, input_html: { class: "longitude" }  %>
         <%# <p>Select a category</p> %>
         <%#= render "components/categories" %>
-        <%= f.input :location %>
+        <%= f.input :location, placeholder: "Enter a location", input_html: { class: "search" } %>
         <%= f.input :category_list,
                     label: "Add categories",
                     collection: [ "Violence", "Theft", "Arson", "Drugs", "Harrasment", "Disturbing the Peace", "Traffic" ],
