--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -18,7 +18,7 @@
     font-style: italic;
   }
 
-  input.category {
+  .select .form-select {
     margin-bottom: 1px;
     border-radius: 1rem;
     background: #e5e5e5;
