--- a/app/views/incidents/_incident_card_bottom.html.erb
+++ b/app/views/incidents/_incident_card_bottom.html.erb
@@ -3,6 +3,8 @@
   <% meguro_long = 139.6981 %>
   <% if request.location.latitude.present? %>
     <% distance = (Geocoder::Calculations.distance_between([request.location.latitude, request.location.longitude], [@incident.latitude, @incident.longitude])).round(0) %>
+  <% elsif @incident.latitude.nil? %>
+    <% distance = 'Unknown' %>
   <% else %>
     <% distance = (Geocoder::Calculations.distance_between([meguro_lat, meguro_long], [@incident.latitude, @incident.longitude])).round(0) %>
   <% end %>
