added disabled:true to the icon so that the form won't be submitted by users clicking it

--- a/app/views/components/_date_picker_for_report.html.erb
+++ b/app/views/components/_date_picker_for_report.html.erb
@@ -10,7 +10,7 @@
         flatpickr_disable_mobile: "true", # Prevents native picker on mobile
         flatpickr_default_date: "today",
       }%>
-    <%= f.button :select, class: "button date" do %>
+    <%= f.button :select, class: "button date", disabled: true do %>
       <i class="fas fa-chevron-down"></i>
     <% end %>
   <% end %>
