--- a/app/views/incidents/_distance_icon.html.erb
+++ b/app/views/incidents/_distance_icon.html.erb
@@ -1,4 +1,6 @@
-<% if distance < 5 %>
+<% if distance == 'Unknown'%>
+  <i class="fas fa-question me-2" style="font-size: 18px; color: gray;"></i>
+<% elsif distance < 5 %>
   <i class="fas fa-map-marker-alt me-2" style="font-size: 18px; color: #db4444;"></i>
 <% elsif distance > 5 && distance < 10 %>
   <i class="fas fa-map-marker-alt me-2" style="font-size: 18px; color: #db8544;"></i>
