changed the fields color

--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -14,15 +14,14 @@
   input.search {
     margin-bottom: 1px;
     border-radius: 1rem;
-    background: #e5e5e5;
+    background: #bcc4cd;
     color: #393939;
-    font-style: italic;
   }
 
   .select .form-select {
     margin-bottom: 1px;
     border-radius: 1rem;
-    background: #e5e5e5;
+    background: #bcc4cd;
   }
 
   p {
