--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -11,4 +11,9 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  .mapboxgl-ctrl.mapboxgl-ctrl-group {
+    top: 60px;
+    right: -0.5rem;
+  }
 }
