moved style for the report button to button.scss

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -47,4 +47,9 @@
   &.btn--gradient-danger {
     background: $danger-gradient;
   }
+
+  /* ----------------------------- Incident report ---------------------------- */
+  &.btn--report {
+    z-index: 100;
+  }
 }
