--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -51,5 +51,10 @@
   /* ----------------------------- Incident report ---------------------------- */
   &.btn--report {
     z-index: 100;
+    background:#238beb;
+
+    &.btn--report:disabled {
+      background:#808080;
+    }
   }
 }
