--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -12,8 +12,12 @@
     transform: translateX(-50%);
   }
 
+  .mapboxgl-ctrl-geocoder--input {
+    display: none;
+  }
+
   .mapboxgl-ctrl.mapboxgl-ctrl-group {
-    top: 60px;
+    top: 0;
     right: -0.5rem;
   }
 }
