changed bottom nav for profile and updated nav-link controller to reflect active class

--- a/app/views/components/_nav_links.html.erb
+++ b/app/views/components/_nav_links.html.erb
@@ -28,10 +28,10 @@
     <% end %>
   </li>
   <li>
-    <%= link_to "/notifications", class:"nav__link", data: {
-      "nav-link-target": "notifications"
+    <%= link_to "/profile", class:"nav__link", data: {
+      "nav-link-target": "profile"
     } do %>
-      <i class="fas fa-chart-bar"></i>
+      <i class="fas fa-user"></i>
     <% end %>
   </li>
 </ul>
